[package]
name = "starkanatomy-rs"
version = "0.1.0"
edition = "2021"
authors = ["0xch4"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "*"
num-integer = "*"
num-bigint = "*"
rand = "*"
bincode = "*"
serde = "*"
serde_derive = "*"
serde-big-array = "*"
sha3 = "*"
blake2 = "*"
